objects/Billing_Item__c.object
<CustomObject>
    <fields>
        <fullName>Access_to_GA__c</fullName>
        <inlineHelpText>do we have access to Google Analytics</inlineHelpText>
        <label>Access to GA</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Contract__r.AccountId</formula>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Notes__c</fullName>
        <label>Accounting Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Launch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <inlineHelpText>retired see new field &quot;vAuto Provision Activation Date&quot;</inlineHelpText>
        <label>Obsolete_Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active_Conquest_Count__c</fullName>
        <formula>IF( Product_Status__c = &quot;Active&quot; &amp;&amp;  Suite_Name__c = &quot;Conquest&quot;,

1, 0)</formula>
        <inlineHelpText>formula field t - if the billed asset status = active and the product name = conquest, set a value of 1.  Used for reporting</inlineHelpText>
        <label>Active Conquest Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Date__c</fullName>
        <description>1/7 - improved after conversation with Mark</description>
        <formula>IF(
  !ISBLANK(   Legacy_Active_Date__c   ), Legacy_Active_Date__c,Related_Project_Piece__r.Active_Date__c)</formula>
        <inlineHelpText>Formula field - if there is a legacy asset date use that otherwise use the active date from the project asset</inlineHelpText>
        <label>Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active_Month_Year__c</fullName>
        <description>admin field to convert the active date to the active month/year for the vauto asset recon</description>
        <formula>TEXT(MONTH( Active_Date__c )) &amp;&quot;-&quot;&amp;  TEXT(YEAR(Active_Date__c ))</formula>
        <label>Active Month/Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Provision_Count__c</fullName>
        <formula>IF( Product_Status__c = &quot;Active&quot; &amp;&amp;  Suite_Name__c = &quot;Provision&quot;,

1, 0)</formula>
        <inlineHelpText>formula field that looks to see if the billed asset status = active and product name = provision, then sets a value of 1.  Used for reporting</inlineHelpText>
        <label>Active Provision Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Quantity__c</fullName>
        <formula>Related_Project_Piece__r.Mailprint_Record_Count__c</formula>
        <inlineHelpText>Formula field that reads the Project Asset field &quot;Actual Drop Quantity&quot; to be used by Order QA to bill the customer the actual qty, not the estimated</inlineHelpText>
        <label>Actual Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adobe_Report_Suites__c</fullName>
        <label>Adobe Report Suites</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(  RecordType.DeveloperName = &quot;ADD&quot;, Today()- DATEVALUE( CreatedDate ) , DATEVALUE(Date_Activated_in_RMB__c) - DATEVALUE( CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alt_Description_Alert__c</fullName>
        <defaultValue>&quot;Alternate Description is seen by the Customer&quot;</defaultValue>
        <inlineHelpText>these notes are displayed on the customer&apos;s invoice</inlineHelpText>
        <label>Alt Description Alert</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Line__c</fullName>
        <inlineHelpText>holds legacy data that has been imported</inlineHelpText>
        <label>Alternate Line #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Product_Description__c</fullName>
        <inlineHelpText>check the use alternate description checkbox, then enter the product description you would like to appear on the invoice</inlineHelpText>
        <label>Alternate Product Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appeal_Cancellation_Date__c</fullName>
        <inlineHelpText>updated by the DRT team if the dealer request is approved</inlineHelpText>
        <label>Appeal Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appeal_Category__c</fullName>
        <formula>TEXT(Related_Appeal__r.Why_are_we_issuing_credit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appeal Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appeal_Type__c</fullName>
        <formula>TEXT(Related_Appeal__r.Type_of_Credit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appeal Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_to_Stop_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Updated during the appeal process.</inlineHelpText>
        <label>Approved to Stop Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset_Compliance_Required__c</fullName>
        <label>Asset Compliance Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Product_Name__c</fullName>
        <inlineHelpText>salesforce will not allow the use of any product information in formula fields for rollups so this field was created and is updated by workflow when the record is created therefore enabling rollup capability</inlineHelpText>
        <label>Asset Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BA_Info_for_Clone_Flow__c</fullName>
        <description>Used for the Clone vAuto Contract Flow. Provides a label to identify individual Billed Assets.</description>
        <formula>Product_Sold_Debug__c &amp; &quot; - $&quot; &amp;
TEXT(Total_Price__c) &amp; &quot; - &quot; &amp;
RecordType.Name &amp; &quot; - Created on &quot; &amp;
TEXT(CreatedDate)</formula>
        <label>BA Info for Clone Flow</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BA_Name__c</fullName>
        <formula>Name &amp;&quot;-&quot;&amp;   Dealer__c &amp;&quot;-&quot;&amp;Product_Sold__r.Name</formula>
        <inlineHelpText>Formula field that concatenates the Billed Asset link, Dealer Name and Product Sold into 1 field</inlineHelpText>
        <label>BA Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Behavorial_Campaigns__c</fullName>
        <label>Behavorial Campaigns</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bill_Now_Warning__c</fullName>
        <formula>IF( Bill_Now__c = false,  IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000001zrOt&amp;oid=00D700000008zHZ&amp;lastMod=1376942169000&quot;, &quot;Next Run&quot;,50,500 ) , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Now Warning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Now__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This says that this charge/contract line must be billed in the next bill run (e.g. that night) and not wait for when the account is next billed. It forces an adhoc bill in the middle of the billing cycle.</inlineHelpText>
        <label>Bill Now</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_Period_Code__c</fullName>
        <inlineHelpText>Required if Recurring Flag = “BP”. Here the cutoff date is configured in the RMB bill period schedule</inlineHelpText>
        <label>Bill Period Code</label>
        <picklist>
            <picklistValues>
                <fullName>FUTUREM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAST-MON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAST-Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANNUAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bill_To_Dealer_Name__c</fullName>
        <formula>Contract__r.Bill_To_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Dealer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_SVOC_Id__c</fullName>
        <formula>Contract__r.Bill_To_SVOC_ID__c</formula>
        <label>Bill to SVOC Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billed_Status_Product__c</fullName>
        <formula>Product_Status__c &amp;&quot;-&quot;&amp;  Suite_Name__c</formula>
        <inlineHelpText>formula field that combines the asset status and product name for sorting more efficiently in the product status summary list</inlineHelpText>
        <label>Billed Status &amp; Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Start_Day__c</fullName>
        <formula>DAY( Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Start Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Status__c</fullName>
        <description>related to VinSolutions</description>
        <formula>IF(
   OR( 
      Start_Date__c = Completed_Date__c,
      Start_Date_Exception__c = TRUE,
       Business_Unit__c = &quot;VinSolutions&quot;
   ), 
   &quot;Good to Go&quot;, 
   &quot;Update Start Date&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that keeps the billing status up to date.</inlineHelpText>
        <label>Billing Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Warning__c</fullName>
        <formula>IF( 
 AND(
Days_to_Billing__c &lt;=14,ISBLANK(Completed_Date__c)),  
IMAGE(&quot;/servlet/servlet.ImageServer?id=0157000000207ts&amp;oid=00D700000008zHZ&amp;lastMod=1378474325000&quot;, &quot;Warning&quot;), NULL)</formula>
        <inlineHelpText>Formula field that looks at the Days to Billing field and if less than or equal to 7 days displays the critical indicator</inlineHelpText>
        <label>Billing Warning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>Contract__r.Business_Unit__c</formula>
        <inlineHelpText>Which Business Unit is associated with this Billed Asset. Pulls from the Contract field, which in turn pulls from the Opp.</inlineHelpText>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bypass_Deferral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Deferral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_schedule_id__c</fullName>
        <inlineHelpText>vinmanager unique id</inlineHelpText>
        <label>Campaign Schedule Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <label>Churn Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Billed in Error by Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand compliancy/OEM Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation Rescind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Churned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Correction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cutting Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealership Closed/Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Receive Functionality That Was Expected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Communication/Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial/Reduction of Service(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Performance Related Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Went w/Competitor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_Type__c</fullName>
        <label>Change Type</label>
        <picklist>
            <picklistValues>
                <fullName>Add Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add One Time Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Promo Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Recurring Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill Travel Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Billing Start Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flip Record to Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flip Record to Locked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flip Record to Modify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lock Item Not Sent to RMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Module Remove</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Add</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reprice Line Item - Contract Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stop Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swap</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cloned_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>check this box if the billed asset is being created from the clone button</inlineHelpText>
        <label>Cloned Asset?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <formula>Related_Project_Piece__r.Project__r.End_Date__c</formula>
        <label>Project Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmed_Training_Start_Date__c</fullName>
        <formula>Related_Project_Piece__r.Project__r.Confirmed_Training_Start__c</formula>
        <inlineHelpText>Formula field that pulls over the Confirmed Training Start Date from the Project</inlineHelpText>
        <label>Confirmed Training Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Integration_Status__c</fullName>
        <formula>TEXT(Contract__r.Integration_Status__c)</formula>
        <inlineHelpText>formula field that reads the integration status from the contract for use in views</inlineHelpText>
        <label>Contract Integration Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Integration_Timestamp__c</fullName>
        <formula>Contract__r.Last_Integration_Date__c</formula>
        <inlineHelpText>formula field that reads the Last Integration Timestamp from the contract, used for views</inlineHelpText>
        <label>Contract Integration Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <formula>TEXT( Contract__r.Status )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <formula>TEXT(Contract__r.Contract_Type__c)</formula>
        <inlineHelpText>Formula field that reads the picklist value from the Contract Type field on Contracts for use in views and reporting</inlineHelpText>
        <label>Contract Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Billed Assets</relationshipLabel>
        <relationshipName>Billing_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Current_Conversion_Rate__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Updated by a manually-kicked-off flow on the first of the month. If the value is not 1 and the Billed Asset is active, this will be updated by the flow. Used to calculate Total Price (Converted).</inlineHelpText>
        <label>Current Conversion Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Date_Activated_in_RMB__c</fullName>
        <formula>Contract__r.Date_Activated_in_RMB__c</formula>
        <label>Date Activated in RMB</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Added_to_RMB__c</fullName>
        <inlineHelpText>updated by workflow when the record type flips from ADD to Modify/Locked during the sync process</inlineHelpText>
        <label>Date Added to RMB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Imp_Completed__c</fullName>
        <formula>Related_Project_Piece__r.Date_Stage_Updated_to_Completed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field that looks up the field from the Project Asset labeled &quot;Date Stage Updated to Completed - this is the date the Asset was made active</inlineHelpText>
        <label>Date Project Asset Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Product_Status_Changed__c</fullName>
        <inlineHelpText>updated by workflow when the product status is changed</inlineHelpText>
        <label>Date Product Status Changed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Active__c</fullName>
        <formula>IF( 
AND(
!ISBLANK(End_Date__c), !ISBLANK(Active_Date__c)), End_Date__c -  Active_Date__c, Null)</formula>
        <inlineHelpText>formula field - if the billing end date is present, count the number of days from the active date to the billing end date.  used for commission reporting</inlineHelpText>
        <label>Days Active</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Waiting_to_Bill__c</fullName>
        <formula>IF( Start_Date_Exception__c = False, Today()- Completed_Date__c , NULL)</formula>
        <inlineHelpText>Formula field that calculates the number of days since the Go Live Date was set</inlineHelpText>
        <label>Days Waiting to Bill</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Billing__c</fullName>
        <formula>IF(  Start_Date_Exception__c = false, Start_Date__c - Today(), NULL)</formula>
        <inlineHelpText>Formula field, if the Project&apos;s Go Live Date is blank, calculate the # of days from today until the billing start date</inlineHelpText>
        <label>Days to Billing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <formula>Contract__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debug__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>aka Stop Date Provide an End Date to stop billing for this item.  Cannot be after Contract End Date. Default to 12/31/2100 if not provided on Add or Modify action.</inlineHelpText>
        <label>Billing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Find_LSE_Difference__c</fullName>
        <description>admin field only</description>
        <formula>IF( Product_Sold_Debug__c = &quot;Pricing Tool&quot;, Related_POA__r.Provision_LSE__c - Last_SE_Date__c, NULL)</formula>
        <label>Find LSE Difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flag_for_sister_child_site__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>update this checkbox if this site is associated with a group</inlineHelpText>
        <label>Flag for Sister/Child Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Franchise_Status__c</fullName>
        <label>Franchise Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single Franchise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi Franchise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <inlineHelpText>Required if Recurring Flag = “FR”. Here the contract anniversary date is used as the cutoff or end date of the bill period</inlineHelpText>
        <label>Frequency</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Greentree_Account__c</fullName>
        <inlineHelpText>vauto legacy data field</inlineHelpText>
        <label>Greentree Account</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Greentree_Contract_Line__c</fullName>
        <label>Greentree Contract Line</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Greentree_Contract__c</fullName>
        <label>Greentree Contract</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Status__c</fullName>
        <formula>IF(!ISBLANK(Related_Project_Piece__c),
CASE(Related_Project_Piece__r.Project_Piece_Stage__c, 
&quot;Completed&quot;, &quot;Completed&quot;, 
&quot;Active&quot;, &quot;Completed&quot;,
&quot;Cancelled&quot;, &quot;Cancelled&quot;,
&quot;Working&quot;),
CASE( Legacy_Account_Status__c , 
&quot;Active&quot;, &quot;Completed&quot;, 
&quot;Inactive&quot;, &quot;Cancelled&quot;,
&quot;Working&quot;))</formula>
        <label>Project Asset Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Date__c</fullName>
        <formula>IF(
 ISNULL( Legacy_ID__c ),  Related_Project_Piece__r.Date_out_of_Integration__c ,  Legacy_Install_Date__c )</formula>
        <inlineHelpText>Formula field - If the Legacy ID is null, use the related Project Asset field &quot;Date out of integration&quot; , otherwise use the Legacy Install Date</inlineHelpText>
        <label>Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Integration_Message__c</fullName>
        <label>Integration Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_Description__c</fullName>
        <formula>Product_Sold__r.Name</formula>
        <inlineHelpText>used for sending billing info to RMB</inlineHelpText>
        <label>Invoice Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB_Status__c</fullName>
        <label>Product Status</label>
        <picklist>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Churned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Churned WriteOff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Launch Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Needs Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Needs Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Save</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Save - Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Save - Pre Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Save - SVOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Save - Temp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transitioned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Triage</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>lookup to the BU POA only if the Product is a primary product: CRM, ILM, Webiste, Provision, Conquest, Auction Genius. A primary product has the field &quot;Base Asset&quot; set to True in the product record detail page</inlineHelpText>
        <label>Primary Product Status</label>
        <referenceTo>POA__c</referenceTo>
        <relationshipLabel>Product Status List</relationshipLabel>
        <relationshipName>Billing_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LSE_Age__c</fullName>
        <formula>IF(
 ISNULL( Last_SE_Date__c ), NULL, Today()- Last_SE_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field to calculate the age from the last SE</inlineHelpText>
        <label>LSE Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LSE_Status_Count__c</fullName>
        <formula>IF(
OR(
  AND(SE_Priority__c != &quot;High&quot;, LSE_Age__c &gt; 30), AND(SE_Priority__c = &quot;High&quot;, LSE_Age__c &gt; 7)),   
True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LSE Status Count</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LSE_Status__c</fullName>
        <formula>IF(
OR(
  AND(SE_Priority__c != &quot;High&quot;, LSE_Age__c &gt; 30), AND(SE_Priority__c = &quot;High&quot;, LSE_Age__c &gt; 7)),   IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000001UBKB&amp;oid=00D700000008zHZ&amp;lastMod=1326845376000&quot;, &quot;Red&quot;),
IMAGE(&quot;/servlet/servlet.ImageServer?id=015700000021RyM&amp;oid=00D700000008zHZ&amp;lastMod=1418162444000&quot;, &quot;Green&quot;, 10,10)
)</formula>
        <label>LSE Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Asset_Audit__c</fullName>
        <label>Last Asset Audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Compliance_Audit_Date__c</fullName>
        <label>Last Compliance Audit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Date_Time_Updated__c</fullName>
        <formula>LastModifiedDate</formula>
        <inlineHelpText>Formula field that reads the Last Modified Date field and captures the time also for reports</inlineHelpText>
        <label>Last Date Time Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Integration_Date__c</fullName>
        <inlineHelpText>updated by workflow</inlineHelpText>
        <label>Last Integration TimeStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Time__c</fullName>
        <formula>LastModifiedDate</formula>
        <inlineHelpText>admin field for reporting</inlineHelpText>
        <label>Last Modified Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_OEM_Approval__c</fullName>
        <label>Last OEM Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_OEM_Marketing_Approval__c</fullName>
        <label>Last OEM Marketing Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_SEO_Audit__c</fullName>
        <label>Last SEO Audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_SE_Date__c</fullName>
        <label>Last SE Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Account_Status__c</fullName>
        <inlineHelpText>hidden field that holds the legacy account status which is really the product status</inlineHelpText>
        <label>vAuto Asset Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Active_Date__c</fullName>
        <label>Legacy Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Install_Date__c</fullName>
        <inlineHelpText>date integration was completed</inlineHelpText>
        <label>Legacy Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Purchase_Date__c</fullName>
        <inlineHelpText>hidden field to hold the legacy system purchase date this field will be updated to the purchase date field when conditions are met</inlineHelpText>
        <label>Legacy Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Status__c</fullName>
        <label>Legacy Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_product_code__c</fullName>
        <label>Legacy product code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
</CustomObject>